# vergen-build-info-test

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: docker.yaml
src/: main.rs
